[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://environment.tres" type="Environment" id=2]
[ext_resource path="res://scripts/monitor.gd" type="Script" id=3]
[ext_resource path="res://images/monitor_button.png" type="Texture" id=4]
[ext_resource path="res://scripts/monitor_ui.gd" type="Script" id=5]
[ext_resource path="res://sounds/wop.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/pow.ogg" type="AudioStream" id=7]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.6, 0.6, 0.05 )

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.6684, -0.354599 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -105, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "monitor_off"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.93367, -0.303628 ), Vector3( 0, 1.6684, -0.354599 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -105, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "not_facing_monitor"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("MonitorSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "monitor_on"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.6684, -0.354599 ), Vector3( 0, 1.93367, -0.303628 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -105, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "facing_monitor"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("MonitorSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
environment = ExtResource( 2 )
current = true
fov = 60.0

[node name="Monitor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -0.258819, 0.965926, 0, -0.965926, -0.258819, 0, 1.6684, -0.354599 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Monitor"]
mesh = SubResource( 1 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Monitor"]
autoplay = "default"
anims/default = SubResource( 4 )
anims/monitor_off = SubResource( 2 )
anims/monitor_on = SubResource( 3 )

[node name="MonitorSound" type="AudioStreamPlayer" parent="Monitor"]
stream = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MonitorUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MonitorUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MonitorUI/VBoxContainer"]
margin_top = 987.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
alignment = 1

[node name="MonitorButton" type="TextureRect" parent="CanvasLayer/MonitorUI/VBoxContainer/HBoxContainer"]
margin_left = 651.0
margin_right = 1268.0
margin_bottom = 93.0
texture = ExtResource( 4 )

[connection signal="lower_monitor" from="." to="CanvasLayer/MonitorUI" method="_on_Player_lower_monitor"]
[connection signal="monitor_off" from="CanvasLayer/MonitorUI" to="Monitor" method="_on_MonitorUI_monitor_off"]
[connection signal="monitor_on" from="CanvasLayer/MonitorUI" to="Monitor" method="_on_MonitorUI_monitor_on"]
[connection signal="mouse_entered" from="CanvasLayer/MonitorUI/VBoxContainer/HBoxContainer/MonitorButton" to="CanvasLayer/MonitorUI" method="_on_MonitorButton_mouse_entered"]
